# tp53-sgrna-prioritization

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
config/: params.yaml
scripts/: download_cfd_weights.py  sensitivity.py  setup_grch38.sh
src/: __init__.py  cfd.py  cfd_loader.py  cli.py  compose_rankings.py  config.py  enumerate_sgrnas.py  fetch_cds.py  fetch_cohort_mutations.py  make_tables.py  score_off_target.py  score_on_target.py  utils.py
tests/: conftest.py  test_cfd.py  test_cli_smoke.py  test_compose_rankings.py  test_enumerate_sgrnas.py  test_fetch_cds.py  test_on_target.py  test_utils.py
